# trading-journal

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.web  ELECTRON.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  electron-builder.yml  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
worker/: Dockerfile  pyproject.toml
worker/csj_worker/: __init__.py  balances.py  crypto.py  db.py  excursions.py  http_server.py  logging_config.py  main.py  positions_aggregator.py  prices.py  types.py
worker/csj_worker/adapters/: __init__.py  base.py  binance.py  bybit.py  generic.py  hyperliquid.py
worker/csj_worker/adapters/configs/: __init__.py  _base.py  binance.py  bingx.py  bitget.py  bybit.py  gate.py  htx.py  kucoin.py  mexc.py  okx.py  phemex.py
worker/csj_worker/adapters/legacy/: __init__.py  bybit.py  hyperliquid.py
worker/csj_worker/matcher/: __init__.py  config.py  engine.py  models.py  rules.py
worker/tests/: conftest.py  test_balances.py  test_db_helpers.py  test_db_safety.py  test_excursions.py  test_logging_config.py  test_main_cli.py  test_positions_aggregator.py  test_sync_jobs_handshake.py
worker/tests/adapters/: test_binance.py  test_bybit.py  test_generic_adapter.py  test_hyperliquid.py
worker/tests/fixtures/binance/: account_read_only.json  account_with_withdraw.json  funding_history_page1.json  my_trades_page1.json  position_risk.json  (+1 more)
worker/tests/matcher/: test_engine.py  test_rules.py
(+538 files in other folders)
