[project]
name = "csj-worker"
version = "0.1.0"
description = "Crypto Spread Journal — ingestion worker"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "supabase>=2.10.0",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "apscheduler>=3.10.4",
    "psycopg[binary,pool]>=3.2.0",
    "cryptography>=44.0.0",
    "python-decimal>=1.0.0; python_version<'3.0'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "respx>=0.22.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# ccxt ships no py.typed marker and no stubs; silence all errors for that module.
module = ["ccxt", "ccxt.*"]
ignore_missing_imports = true
ignore_errors = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "respx>=0.23.1",
]

[tool.hatch.build.targets.wheel]
packages = ["csj_worker"]
